// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AchievementEngineConflicts renders correctly with conflict details 1`] = `
<WithStyles(ForwardRef(TextField))
  FormHelperTextProps={
    Object {
      "className": undefined,
    }
  }
  InputLabelProps={
    Object {
      "className": undefined,
    }
  }
  InputProps={
    Object {
      "className": undefined,
      "disableUnderline": true,
    }
  }
  disabled={true}
  helperText="Rulesets in conflict!"
  label="Ruleset"
  value="stronghold-5"
/>
`;

exports[`AchievementEngineConflicts renders correctly with no conflict details 1`] = `
<WithStyles(ForwardRef(TextField))
  FormHelperTextProps={
    Object {
      "className": undefined,
    }
  }
  InputLabelProps={
    Object {
      "className": undefined,
    }
  }
  InputProps={
    Object {
      "className": undefined,
      "disableUnderline": true,
    }
  }
  disabled={true}
  label="Ruleset"
  value="stronghold-5"
/>
`;
